--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="css/mystyle.css">
     <script defer src="js/first.js"></script>
-    <title>JavaScript</title>
+    <title>food</title>
 </head>
 <body>
     
@@ -20,7 +20,7 @@
 
     <div class="mobile-container">
         <header>
-            <input type="text" id="search-term" />
+            <input type="text" id="search-term"  placeholder="Search........"/>
             <button id="search"><i class="fas fa-search"><img src="https://cdn2.iconfinder.com/data/icons/minimal-set-five/32/minimal-48-512.png" alt=""></i></button>
         </header>
         <div class="fav-container">
